--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -10,7 +10,7 @@
 <div class="card-top container-fluid">
   <div class="container d-flex">
     <div class="item">
-      <a>
+      <a (click)="filter('')">
         <img
           src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100"
           alt=""
@@ -19,7 +19,7 @@
       </a>
     </div>
     <div class="item">
-      <a>
+      <a (click)="filter('electronics')">
         <img
           src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100"
           alt=""
@@ -28,7 +28,7 @@
       </a>
     </div>
     <div class="item">
-      <a>
+      <a (click)="filter('fashion')">
         <img
           src="https://rukminim1.flixcart.com/flap/128/128/image/82b3ca5fb2301045.png?q=100"
           alt=""
@@ -37,7 +37,7 @@
       </a>
     </div>
     <div class="item">
-      <a>
+      <a (click)="filter('jewelery')">
         <img
           style="width: 62px; margin-top: 5px"
           src="https://rukminim1.flixcart.com/image/580/696/kkh6zrk0/jewellery-set/o/w/z/gt-ns-862-matushri-art-original-imafzt9teacakjyn.jpeg?q=50"
@@ -51,13 +51,13 @@
 
 <div class="container">
   <div class="row">
-    <ng-container *ngFor="let item of productList | filter:searchKey:'title'">
+    <ng-container *ngFor="let item of filterCategory  | filter:searchKey:'title'">
       <div class="card col-md-3">
         <img src="{{ item.image }}" alt="" />
         <h5 class="product-title">{{ item.title }}</h5>
         <p class="product-title">{{ item.description }}</p>
         <p><span style="font-weight: bold">Price:</span> ${{ item.price }}</p>
-        <button class="btn btn-primary" (click)="  addtocart(item)">View Details</button>
+        <button class="btn btn-primary" (click)="  addtocart(item)">Add To Cart</button>
       </div>
     </ng-container>
   </div>
